tests/ui/lint/snapshots/pub_impl_string_method_satisfying_stringer_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Miscased name
   ╭─[test.lis:7:10]
 6 │ impl Point {
 7 │   pub fn String(self) -> string { "point" }
   ·          ───┬──
   ·             ╰── expected snake_case
 8 │ }
   ╰────
  help: Rename to `string` · code: [lint.non_snake_case_function]
