tests/ui/lint/snapshots/pub_interface_non_builtin_pascal_method_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Miscased name
   ╭─[test.lis:3:6]
 2 │ pub interface Device {
 3 │   fn Read() -> int
   ·      ──┬─
   ·        ╰── expected snake_case
 4 │ }
   ╰────
  help: Rename to `read` · code: [lint.non_snake_case_function]
