tests/ui/lint/snapshots/raw_tag_plus_alias_same_key_duplicate.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Duplicate tag
   ╭─[test.lis:4:3]
 3 │ pub struct User {
 4 │   #[tag(`validate:"required"`)]
   ·   ──────────────┬──────────────
   ·                 ╰── first occurrence
 5 │   #[tag("validate", "email")]
   ·   ─────────────┬─────────────
   ·                ╰── `validate` is already set
 6 │   name: string,
   ╰────
  help: Remove one of the `validate` attributes - each tag key may appear only once per field · code: [attribute.duplicate_tag]
