tests/ui/lint/snapshots/redundant_closure_generic_callee.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant closure
   ╭─[test.lis:6:18]
 5 │   let xs = [1, 2, 3]
 6 │   let _ = xs.map(|x| identity(x))
   ·                  ───────┬───────
   ·                         ╰── can be simpler
 7 │ }
   ╰────
  help: Replace this closure with `identity` · code: [lint.redundant_closure]
