tests/ui/lint/snapshots/redundant_closure_module_member.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant closure
   ╭─[test.lis:6:18]
 5 │   let xs = ["1", "2"]
 6 │   let _ = xs.map(|s| strconv.Atoi(s))
   ·                  ─────────┬─────────
   ·                           ╰── can be simpler
 7 │ }
   ╰────
  help: Replace this closure with `strconv.Atoi` · code: [lint.redundant_closure]
